styles.css
html,
body {
    margin: 0;
    padding: 0;
    width: 100%;
    height: 100%;
    display: table;
    background-color: black;
    background-image: url(./images/light-medium.jpg);
  }
  
  @font-face {
    font-family: neon;
    src: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/707108/neon.ttf);
  }
  
  .container {
    display: table-cell;
    text-align: center;
    vertical-align: middle;
  }

#transcript {
    margin: 30px 0;
    white-space: pre-wrap;
}

#start-button,
#stop-button {
    margin: 5px 0;
}

#error {
    padding: 10px;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 1.4rem;
    border-radius: 5px 5px 5px 5px;
    color: #D8000C;
    background-color: #FFD2D2;
    display: none;
}

.isa_error i {
    margin: 2px 12px;
    font-size: 1.5em;
    vertical-align: middle;
}

#signout-button {
    height: 52px;
}


.small-caps {
    font-variant: small-caps;
}



.neon {
    font-family: neon;
    color: #FB4264;
    font-size: 9vw;
    line-height: 9vw;
    /* text-shadow: 0 0 3vw #F40A35;  */
    background: url(./images/background.jpg) center;
    color: transparent;
    background-clip: text;
  }
  
  .flux {
    font-family: neon;
    color: #426DFB;
    font-size: 9vw;
    line-height: 9vw;
    /* text-shadow: 0 0 3vw #2356FF; */
    background: url(./images/background.jpg) center;
    color: transparent;
    background-clip: text;
  
  }
  
  .neon {
    animation: neon 1s ease infinite;
    -moz-animation: neon 1s ease infinite;
    -webkit-animation: neon 1s ease infinite;
  }
  
  /* @keyframes neon {
    0%,
    100% {
      text-shadow: 0 0 1vw #FA1C16, 0 0 3vw #FA1C16, 0 0 10vw #FA1C16, 0 0 10vw #FA1C16, 0 0 .4vw #FED128, .5vw .5vw .1vw #806914;
      color: #FED128;
    }
    /* 50% {
      text-shadow: 0 0 .5vw #800E0B, 0 0 1.5vw #800E0B, 0 0 5vw #800E0B, 0 0 5vw #800E0B, 0 0 .2vw #800E0B, .5vw .5vw .1vw #40340A;
      color: #806914;
    } 
  } */
  
  .flux {
    animation: flux 2s linear infinite;
    -moz-animation: flux 2s linear infinite;
    -webkit-animation: flux 2s linear infinite;
    -o-animation: flux 2s linear infinite;
  }
  
  /* @keyframes flux {
    0%,
    100% {
      text-shadow: 0 0 1vw #1041FF, 0 0 3vw #1041FF, 0 0 10vw #1041FF, 0 0 10vw #1041FF, 0 0 .4vw #8BFDFE, .5vw .5vw .1vw #147280;
      color: #28D7FE;
    }
    /* 50% {
      text-shadow: 0 0 .5vw #082180, 0 0 1.5vw #082180, 0 0 5vw #082180, 0 0 5vw #082180, 0 0 .2vw #082180, .5vw .5vw .1vw #0A3940;
      color: #146C80;
    } 
  } */
  

